# TikTok-Product-Scout

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml  proxy.example.yaml
docs/: deep_review_assessment.md
scripts/: setup.py  setup.sh  test_scrape.sh
src/: __init__.py  __main__.py  main.py
src/agents/: __init__.py  aliexpress.py  amazon_movers.py  base_agent.py  google_trends.py  tiktok_creative_center.py  tiktok_shop.py
src/alerts/: __init__.py  discord.py  email.py
src/api/: __init__.py  main.py
src/orchestrator/: __init__.py  coordinator.py  scheduler.py
src/scoring/: __init__.py  composite.py  margin.py  saturation.py  velocity.py
src/storage/: __init__.py  database.py  models.py
src/utils/: __init__.py  config.py  fingerprint.py  logger.py  proxy.py  stealth.py
tests/: test_database_idempotency.py  test_scheduler_defaults.py
