[project]
name = "tiktok-product-scout"
version = "1.0.0"
description = "Agentic automation tool for discovering viral TikTok products"
authors = [{name = "TikTok Product Scout Team"}]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.5.0",
    "numpy>=1.26.0",
    "pytrends>=4.9.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
